# Playwaze-Entries-Report-Converter

./: Playwaze team members.xlsx  Playwaze teams.xlsx  README.md  app.py  environment.yml  playwaze_reports.py  pyproject.toml  requirements.txt  streamit_app.py  streamlit_app.py  views.py
config/: app_config.yaml  playwaze_config.yaml
playwaze_rowing_reports/: playwaze_reports.py  views.py
resources/: OaraConfig.csv
