[tool.poetry]
name = "playwaze_rowing_reports"
version = "0.1.0"
description = ""
authors = ["Adam <adam.hardy@deepmatter.io>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.12.0"
pandas = "^1.4.3"
numpy = "^1.23.2"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
